added wisdom text

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,14 @@
 
 <!-- add HTML code in the blocks -->
 {% block head %}
-<title>Wise Cats</title>
+<title>Wise Cat Café</title>
 {% endblock %}
 
 {% block body %}
 
 <h1>WiWiWi!!!</h1>
+
+<h2>{{ wisdom }}</h2>
 
 <!-- access variables set within app.py -->
 <img src="{{ img }}" alt="cat" style="width:500px">
