changed form action to /summon, method to GET, and changed the inside to a button

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,11 @@
 <!-- access variables set within app.py -->
 <img src="{{ img }}" alt="cat" style="width:500px">
 
+<br>
+
 <table>
-    <form action="/" method="POST">
-        <input type="submit" value="make cat image!">
+    <form action="/summon" method="GET">
+        <button>summon new cat!</button>
     </form>
 </table>
 
