added form for naming and adopting a cat

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,13 @@
     <form action="/summon" method="GET">
         <button>summon new cat!</button>
     </form>
+
+    <br>
+
+    <form action="/adopt" method="POST">
+        <input type="text" name="name" required> <!--temp input validation-->
+        <button>adopt cat!</button>
+    </form>
 </table>
 
 {% endblock %}
