--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Wise Cat Café - Login</title>
+<title>Login - Wise Cat Café</title>
 {% endblock %}
 
 {% block body %}
 
+<form action="/home" method="GET">
 
+    <h2>Username</h2>
+    <input type="text" name="username" required>
+
+    <h2>Password</h2>
+    <input type="text" name="password" required>
+
+    {% block additional_fields %}{% endblock %}
+
+    <button>submit</button>
+</form>
 
 {% endblock %}
