--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Login - Wise Cat Café</title>
+<title>Log In - Wise Cat Café</title>
 {% endblock %}
 
 {% block body %}
 
-<form action="/home" method="GET">
+<form action="/login" method="POST">
 
     <h2>Username</h2>
     <input type="text" name="username" required>
@@ -14,9 +14,13 @@
     <h2>Password</h2>
     <input type="text" name="password" required>
 
-    {% block additional_fields %}{% endblock %}
+    <button>Log In</button>
+</form>
 
-    <button>submit</button>
+<br>
+
+<form action="/signup" method="GET">
+    <button>Sign Up</button>
 </form>
 
 {% endblock %}
