--- a/templates/login.html
+++ b/templates/login.html
@@ -8,8 +8,11 @@
 
 <form action="/login" method="POST">
 
+    <p style="color:green">{{ signup_success }}</p>
+    <p style="color:red">{{ login_error }}</p>
+
     <h2>Username</h2>
-    <input type="text" name="username" required>
+    <input type="text" name="username" value="{{ username }}" required>
 
     <h2>Password</h2>
     <input type="text" name="password" required>
