added button to return to login page

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,4 +19,10 @@
     <button>Sign Up</button>
 </form>
 
+<br>
+
+<form action="/login" method="GET">
+    <button>Back to Login</button>
+</form>
+
 {% endblock %}
