--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,7 +39,7 @@ h1.login {
 
 div.logout {
     position: absolute;
-    top: 10vh;
+    top: 9vh;
     left: 1vw;
     background-color: rgba(255, 255, 255, 0.5);
     /* 46, 46, 46 = #2e2e2e */
@@ -80,10 +80,38 @@ button.door-clickbox {
     top: 405px;
     left: 622px;
     border: none;
-    opacity: 0.5;
+    opacity: 0;
 }
 
 button.door-clickbox:hover {
     background-color: red;
-    opacity: 0.5;
+    opacity: 0;
+}
+
+div.black-bar-top {
+    position: fixed;
+    width: 100%;
+    height: 9vh;
+    top: -9vh;
+    background-color: black;
+    z-index: -1;
+    transition: 0.5s ease-in-out;
+}
+
+div.black-bar-top.active {
+    top: 0;
+}
+
+div.black-bar-bottom {
+    position: fixed;
+    width: 100%;
+    height: 9vh;
+    top: 100vh;
+    background-color: black;
+    z-index: 2;
+    transition: 0.5s ease-in-out;
+}
+
+div.black-bar-bottom.active {
+    top: 91vh;
 }
