--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- double curly braces takes the code you write and gives the result as a string -->
-    <!-- do this to import css files with jinja -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     
     <!-- defines where the child files will add HTML code -->
     {% block head %}{% endblock %}
@@ -16,5 +12,18 @@
 
 <body>
     {% block body %}{% endblock %}
+
+    <form action="/login" method="GET">
+        <button class="login" {% if current_user.is_authenticated %} style="pointer-events:none" {% endif %}>
+
+            <img class="login" src="{{ url_for('static', filename='images/user.png') }}">
+            
+            <h1 class="login">{% if current_user.is_authenticated %} {{ current_user.username }} {% else %} Log in {% endif %}</h1>
+        </button>
+    </form>
+
+    <form action="/logout" method="GET"">
+        <button class="logout" {% if not current_user.is_authenticated %} style="display:none" {% endif %}>Log out</button>
+    </form>
 </body>
 </html>
