--- a/templates/index.html
+++ b/templates/index.html
@@ -3,23 +3,15 @@
 
 <!-- add HTML code in the blocks -->
 {% block head %}
+
+<!-- each page will now have its own style sheet -->
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
 <title>Wise Cat Café</title>
+
 {% endblock %}
 
 {% block body %}
-
-<form action="/login" method="GET">
-    <button class="login" {% if current_user.is_authenticated %} style="pointer-events:none" {% endif %}>
-
-        <img class="login" src="{{ url_for('static', filename='images/user.png') }}">
-        
-        <h1 class="login">{% if current_user.is_authenticated %} {{ current_user.username }} {% else %} Log in {% endif %}</h1>
-    </button>
-</form>
-
-<form action="/logout" method="GET"">
-    <button class="logout" {% if not current_user.is_authenticated %} style="display:none" {% endif %}>Log out</button>
-</form>
 
 <video id="wise-cat-cafe" class="wise-cat-cafe" src="{{ url_for('static', filename='videos/wise_cat_cafe_anim.mp4') }}"></video>
 
@@ -29,7 +21,7 @@
 
 <h2>{{ wisdom }}</h2>
 
-<img src="{{ img }}" style="width:500px">
+<img id="cat-img" class="cat-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDCsqRYLAFDdL4Ix_AHai7kNVyoPV9Ssv1xg&s">
 
 <div id="black-bar-top" class="black-bar-top"></div>
 <div id="black-bar-bottom" class="black-bar-bottom"></div>
@@ -56,6 +48,30 @@
 </table>
 
 <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        if("{{ summoned }}") {
+            var wcc_video = document.getElementById("wise-cat-cafe");
+            var catImage = document.getElementById("cat-img");
+
+            wcc_video.currentTime = 50;
+
+            catImage.classList.add("active");
+
+            var blackBarTop = document.getElementById("black-bar-top");
+
+            blackBarTop.style.transition = "none";
+            blackBarTop.classList.add("active");
+
+            var blackBarBottom = document.getElementById("black-bar-bottom");
+
+            blackBarBottom.style.transition = "none";
+            blackBarBottom.classList.add("active");
+        }
+    })
+
+    // for every function below, use event listeners instead of extra stuff in the HTML
+    // (keeps things clean)
+
     function open_door() {
         var video = document.getElementById("wise-cat-cafe");
         var door_clickbox = document.getElementById("door-clickbox");
