--- a/templates/base.html
+++ b/templates/base.html
@@ -14,16 +14,20 @@
     {% block body %}{% endblock %}
 
     <form action="/login" method="GET">
-        <button class="login" {% if current_user.is_authenticated %} style="pointer-events:none" {% endif %}>
+        <button class="login-button"
+        {% if current_user.is_authenticated %} style="pointer-events:none" {% endif %}>
 
-            <img class="login" src="{{ url_for('static', filename='images/user.png') }}">
+            <img class="login-img" src="{{ url_for('static', filename='images/user.png') }}">
             
-            <h1 class="login">{% if current_user.is_authenticated %} {{ current_user.username }} {% else %} Log in {% endif %}</h1>
+            <h1 class="login-h1">
+                {% if current_user.is_authenticated %} {{ current_user.username }} {% else %} Log in {% endif %}
+            </h1>
         </button>
     </form>
 
     <form action="/logout" method="GET"">
-        <button class="logout" {% if not current_user.is_authenticated %} style="display:none" {% endif %}>Log out</button>
+        <button class="logout-button"
+        {% if not current_user.is_authenticated %} style="display:none" {% endif %}>Log out</button>
     </form>
 </body>
 </html>
