--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,7 +70,7 @@ video.cafe-video {
     width: 130%;
     left: -15vw;
     top: -10vw;
-    z-index: -1;
+    z-index: -2;
 }
 
 button.door-button {
@@ -128,11 +128,82 @@ img.cat-img {
     top: 65vh;
     left: 46vw;
     transition: 1s linear;
+    opacity: 0;
 }
 
 img.cat-img.active {
     transform: translate(-50%, -50%);
+    height: 400px;
     top: 50vh;
     left: 50vw;
-    height: 300px;
+    opacity: 1;
+}
+
+div.wisdom-div {
+    position: absolute;
+    display: flex;
+    top: 5vh;
+    background-color: white;
+    font-family: "capriola";
+    font-size: 20px;
+    text-align: left;
+    align-items: center;
+    border-radius: 10px;
+    padding: 15px;
+    opacity: 0;
+    transition: 0.5s;
+    z-index: 0;
+}
+
+div.wisdom-div.active {
+    opacity: 1;
+}
+
+button.adopt-button {
+    position: absolute;
+    display: none;
+    width: 200px;
+    transform: translate(-100%, 0);
+    top: 80vh;
+    left: 48vw;
+    color: #1A1A2E;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: solid 2px rgba(46, 46, 46, 0.5); /* #2e2e2e */
+    border-radius: 8px;
+    font-family: "capriola";
+    font-size: 35px;
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    transition: 0.5s;
+}
+
+button.adopt-button.active {
+    display: block;
+}
+
+button.abandon-button {
+    position: absolute;
+    display: none;
+    width: 200px;
+    top: 80vh;
+    left: 52vw;
+    color: #1A1A2E;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: solid 2px rgba(46, 46, 46, 0.5); /* #2e2e2e */
+    border-radius: 8px;
+    font-family: "capriola";
+    font-size: 35px;
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    transition: 0.2s;
+}
+
+button.abandon-button.active {
+    display: block;
 }
